correct overflow for instagram section & add border to a theme toggl btn

--- a/app/scss/components/button-theme-toggle.scss
+++ b/app/scss/components/button-theme-toggle.scss
@@ -9,10 +9,11 @@
   background: #78695f;
   border-radius: var(--br-cycle);
   cursor: pointer;
-  transition: background .3s ease-in-out;
+  transition: all .3s ease-in-out;
 
   &:hover {
     background: #00000066;
+    border: 2px solid var(--c-star-gold);
   }
 
   @include wide {
